--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -6,5 +6,7 @@ utils:
   cart:
     prefix: SPRING_WEB_APP_
 integrations:
+  recomendations-service:
+    url: http://localhost:5555/recommendations
   core-service:
     url: http://localhost:5555/core
