--- a/recommendations-service/src/main/resources/application.yaml
+++ b/recommendations-service/src/main/resources/application.yaml
@@ -3,8 +3,5 @@ server:
   servlet:
     context-path: /web-market-recommendations
 utils:
-  cart:
+  recomendations:
     prefix: SPRING_WEB_APP_
-integrations:
-  core-service:
-    url: http://localhost:5555/core
