--- a/cart-service/src/main/resources/application.yaml
+++ b/cart-service/src/main/resources/application.yaml
@@ -8,3 +8,7 @@ utils:
 integrations:
   core-service:
     url: http://localhost:5555/core
+    timeouts:
+      connection: 2000
+      read: 10000
+      write: 2000
