--- a/core-service/src/main/resources/application.yaml
+++ b/core-service/src/main/resources/application.yaml
@@ -24,6 +24,7 @@ spring:
 integrations:
   cart-service:
     url: http://localhost:5555/cart
-    connect-timeout: 2000
-    read-timeout: 10000
-    write-timeout: 2000
+    timeouts:
+      connection: 2000
+      read: 10000
+      write: 2000
